Closed Bug 1734723 Opened 4 years ago Closed 4 years ago

Checkbox border disappears when showing focus rings.

Categories

(Core :: Widget, defect)

defect

Tracking

()

RESOLVED FIXED
95 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox93 --- unaffected
firefox94 --- fixed
firefox95 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

No description provided.
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7e2386b59ca2 Don't use transparent borders for checkbox/radio when focused. r=mstange

Set release status flags based on info from the regressing bug 1734115

Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch

Comment on attachment 9244870 [details]
Bug 1734723 - Don't use transparent borders for checkbox/radio when focused. r=mstange,dholbert

Beta/Release Uplift Approval Request

  • User impact if declined: Regression from bug 1734115 which we want on beta.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Very simple tweak to the non-native theme checkbox painting.
  • String changes made/needed: none
Attachment #9244870 - Flags: approval-mozilla-beta?

Comment on attachment 9244870 [details]
Bug 1734723 - Don't use transparent borders for checkbox/radio when focused. r=mstange,dholbert

Approved for 94.0b6

Attachment #9244870 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: