Bug 1734723 - Don't use transparent borders for checkbox/radio when focused. r=mstange

As those don't draw the outline on top.

Differential Revision: https://phabricator.services.mozilla.com/D127890